feat: add PATCH testcase endpoint
